# gpx_viewer

./: .gitignore  Dockerfile  README.md  design_to_task.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/skills/code-reviewer/: SKILL.md
.github/skills/design-architect/: SKILL.md
.github/skills/fastapi-jinja2/: SKILL.md
.github/skills/implementation/: SKILL.md
.github/skills/python-implementation/: SKILL.md
.github/skills/task-splitter/: SKILL.md
.github/skills/test-first-development/: SKILL.md
.github/skills/ui-ux-designer/: SKILL.md
nginx/: nginx.conf
src/: __init__.py  config.py  dependencies.py  main.py
src/models/: __init__.py  gpx.py
src/routers/: __init__.py  api.py  home.py
src/services/: __init__.py  geocoding.py  gpx_parser.py
src/static/css/: style.css
src/static/js/: main.js
src/static/samples/: sample.gpx
src/templates/: base.html  index.html  map.html
tests/: conftest.py  test_gpx_parser.py  test_home.py
